[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
socket2 = "0.4"
anyhow = "1.0"
# for name->index on unix
libc = { version = "0.2", optional = true }
# for name->index on windows
windows-sys = { version = "0.48", optional = true }
